add additional variables

--- a/.env_sample
+++ b/.env_sample
@@ -6,5 +6,12 @@ PG_PASSWORD =
 PG_HOST =
 PG_PORT =
 
+#токен телеграм бота
 TG_TOKEN =
+#id пользователя
 TG_CHAT_ID =
+
+#имя файла с авторизацией, по дефолту 'credentials.json'
+CREDENTIALS_FILE = 'credentials.json'
+#id таблицы, берется из URL
+SPREADSHEETS_ID =
